<resources>
    <string name="app_name">EventHub</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Closed Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label">Name</string>
    <string name="categories">Categories</string>
    <string-array name="paginationPageSizes">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="service_locations">
        <item></item>
        <item>New York</item>
        <item>Los Angeles</item>
        <item>Chicago</item>
        <item>San Francisco</item>
        <item>Miami</item>
        <item>Las Vegas</item>
        <item>New York</item>
        <item>Austin</item>
        <item>Orlando</item>
        <item>Atlanta</item>
        <item>Houston</item>
        <item>Seattle</item>
        <item>Dallas</item>
        <item>San Diego</item>
        <item>Los Angeles</item>
        <item>Miami</item>
        <item>Nashville</item>
        <item>Chicago</item>
        <item>Boston</item>
        <item>New York</item>
        <item>Denver</item>
        <item>Phoenix</item>
        <item>San Antonio</item>
        <item>Portland</item>
        <item>Las Vegas</item>
        <item>New York</item>
        <item>San Francisco</item>
        <item>Houston</item>
        <item>Miami</item>
        <item>Los Angeles</item>
        <item>Philadelphia</item>
        <item>Seattle</item>
        <item>San Diego</item>
        <item>Chicago</item>
        <item>Boston</item>
        <item>Santa Monica</item>
        <item>Orlando</item>
        <item>Las Vegas</item>
        <item>Phoenix</item>
        <item>San Antonio</item>
        <item>Portland</item>
        <item>New York</item>
    </string-array>
    <string-array name="product_locations">
        <item></item>
        <item>New York</item>
        <item>California</item>
        <item>Texas</item>
        <item>France</item>
        <item>Belgium</item>
        <item>Japan</item>
        <item>Italy</item>
        <item>USA</item>
        <item>Mexico</item>
        <item>Middle East</item>
        <item>Greece</item>
        <item>Los Angeles</item>
        <item>Florida</item>
        <item>London</item>
        <item>Chicago</item>
        <item>South Korea</item>
        <item>Canada</item>
        <item>Spain</item>
        <item>Vietnam</item>
        <item>Kentucky</item>
        <item>China</item>
        <item>England</item>
        <item>India</item>
    </string-array>
    <string-array name="event_locations">
        <item></item>
        <item>Napa Valley Vineyard</item>
        <item>Silicon Valley Expo Center</item>
        <item>Paris Art Museum</item>
        <item>Berlin Startup Hub</item>
        <item>Toronto Film Centre</item>
        <item>Times Square</item>
        <item>City Hall Ballroom</item>
        <item>Aspen Ski Resort</item>
        <item>New York City</item>
        <item>Washington D.C.</item>
        <item>Central Park</item>
        <item>Coachella Valley</item>
        <item>Chicago</item>
        <item>Los Angeles</item>
        <item>San Francisco</item>
        <item>Washington D.C.</item>
        <item>Paris</item>
        <item>San Diego</item>
        <item>Bali</item>
        <item>Barcelona</item>
        <item>New York</item>
        <item>Austin</item>
        <item>Venice</item>
        <item>Munich</item>
        <item>New Orleans</item>
        <item>New York</item>
        <item>Mall of America</item>
        <item>Prague</item>
        <item>London</item>
        <item>Sydney</item>
        <item>Zurich</item>
        <item>Dublin</item>
        <item>Los Angeles</item>
        <item>Berlin</item>
        <item>Amsterdam</item>
        <item>Stockholm</item>
        <item>Austin</item>
        <item>Washington D.C.</item>
        <item>San Francisco</item>
        <item>Los Angeles</item>
        <item>Mexico City</item>
        <item>Reykjavik</item>
        <item>London</item>
        <item>Toronto</item>
        <item>Madrid</item>
        <item>Quebec</item>
        <item>Tokyo</item>
    </string-array>
    <string-array name="EventTypes">
        <item>Svadba</item>
        <item>SLavlje</item>
        <item>Veselje</item>
        <item>Rodjendan</item>
    </string-array>
    <string name="email_placeholder">abc@email.com</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account? <font color="#5669FF">Sign up</font></string>
    <string name="sign_up">Sign up\n</string>
    <string name="name_placeholder">Milan</string>
    <string name="repeat_password">Repeat password</string>
    <string name="your_password">Your password</string>
    <string name="have_an_account">Already have an account?<font color="#5669FF">Sign in</font></string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="eventOrganizer">Event Organizer</string>
    <string name="serviceProvider">Service Provider</string>
    <string name="choose_role">Please select a role:</string>
    <string name="name_label">First name</string>
    <string name="lastname_label">Last name</string>
    <string name="lastname_hint">Lazarevic</string>
    <string name="profile_picture">Profile picture</string>
    <string name="living_address">Street Address</string>
    <string name="telephone_input">Telephone Number</string>
    <string name="phone_placeholder">065/222–333</string>
    <string name="address_placeholder">Street 45</string>
    <string name="upload_image">Upload profile image (Optional)</string>
    <string name="profile_image">Profile Image</string>
    <string name="city_placeholder">New York</string>
    <string name="City">City</string>
    <string name="email_verification_success">Success!</string>
    <string name="check_your_email">Your account is created. Please check your email to verify your account!</string>
    <string name="login_page">login page</string>
    <string name="success_image">Success image</string>
    <string name="company_description">Company description</string>
    <string name="company_name">Company name</string>
    <string name="email_label">Email</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="items_per_page">Items per page</string>
    <string name="lt"><![CDATA[<]]></string>
    <string name="are_you_sure_you_want_to_delete_service">Are you sure you want to delete service?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="customCategoryName">Custom Category Name</string>
    <string name="customCategoryDescription">Custom Category Description</string>
    <string name="service_creation_form">Service Creation Form</string>
    <string name="category">Category my own category description</string>
    <string name="event_type">Event Type</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="stepper">stepper</string>
    <string name="choose_images">Choose Images</string>
    <string name="finish">Finish</string>
    <string name="specificities">Specificities</string>
    <string name="service_duration">Service Duration (Minutes)</string>
    <string name="reservation_deadline">Reservation Deadline (Days)</string>
    <string name="cancellation_deadline">Cancellation Deadline (Days)</string>
    <string name="visibility">Visibility</string>
    <string name="availability">Availability</string>
    <string name="reservation_confirmation">Reservation Confirmation</string>
    <string name="automatic">Automatic</string>
    <string name="manual">Manual</string>
    <string name="button">Button</string>
    <string name="floating_action_button">floating action button</string>
    <string name="service_category">Service Category</string>
    <string name="available_only">Available Services Only</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="products">Products</string>
    <string name="services">Services</string>
    <string name="notifications">Notifications</string>
    <string name="event_types">Event types</string>
    <string name="stats">Stats</string>
    <string name="comments">Comments</string>
    <string name="grades">Grades</string>
    <string name="registrations">Registrations</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="events_favourite">Favorite Events</string>
    <string name="item_favourite">Favorite Items</string>
    <string name="my_calendar">My calendar</string>
    <string name="edit_profile">Edit profile</string>
    <string name="update_profile">Update your profile</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="update_password">Update password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="additional_info">Additional info</string>
    <string name="profile_data">Profile data</string>
    <string name="full_name_placeholder">Milan Lazarevic</string>
    <string name="messages">Messages</string>
    <string name="calendar">Calendar</string>
    <string name="my_events">My events</string>
    <string name="my_products">My products</string>
    <string name="my_services">My services</string>
    <string name="pricelist">Pricelist</string>
    <string name="my_reservations">My reservations</string>
    <string name="reset">Reset</string>
    <string name="enable_availability_switch">Enable Availability Switch</string>
    <string name="create">Create</string>
    <string name="check_proposals">Check Proposals</string>
    <string name="this_is_a_description_of_the_card_item">This is a description of the card item.</string>
    <string name="card_title">Card Title</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="category_creation_form">CATEGORY CREATION FORM</string>
    <string name="cname">Name</string>
    <string name="cdescription">Description</string>
    <string name="submit">submit</string>
    <string name="category_update_form">CATEGORY UPDATE FORM</string>
    <string name="update_category">CATEGORY UPDATE FORM</string>
    <string name="going_on">Going on:</string>
    <string name="are_you_sure_you_want_to_delete_category">Are you sure you want to delete category</string>
    <string name="check_categories">Check categories</string>
    <string name="modify">Modify</string>
    <string name="approve">Approve</string>
    <string name="modify_category_proposal">Modify category proposal</string>
    <string name="or_choose_existing">Or choose existing</string>
    <string name="item_descpription">Item Descpription</string>
    <string name="item_name">Item Name</string>
    <string name="for_this_item">For this item</string>
    <string name="about_event">About event</string>
    <string name="message">Message</string>
    <string name="provider">Provider</string>
    <string name="ibrahim">Ibrahim</string>
    <string name="_36_guild_street_london_uk">36 Guild Street London, UK</string>
    <string name="event_agenda">Event agenda:</string>
    <string name="event_title">Event title</string>
    <string name="book_an_event">Book event</string>
    <string name="disable">Disable</string>
    <string name="price_list">Price List</string>
    <string name="w_discount">w/ Discount</string>
    <string name="generate_pdf">Generate PDF</string>
</resources>