<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:title="@string/home">
            <menu>

                <item
                    android:id="@id/home_fragment"
                    android:icon="@drawable/ic_home_big_black"
                    android:title="@string/home" />
                <item
                    android:id="@+id/event_fragment"
                    android:icon="@drawable/baseline_event_24"
                    android:title="@string/events" />
                <item
                    android:id="@+id/products_fragment"
                    android:icon="@drawable/outline_shopping_bag_24"
                    android:title="@string/products" />
                <item
                    android:id="@+id/services_fragment"
                    android:icon="@drawable/ic_notification"
                    android:title="@string/services" />

            </menu>

        </item>

    </group>

        <group android:checkableBehavior="single">
            <item
                android:title="@string/notifications"
                >
                <menu>
                    <item
                        android:id="@+id/chat_fragment"
                        android:icon="@drawable/outline_message_24"
                        android:title="@string/messages" />
                    <item
                        android:id="@+id/notifications_fragment"
                        android:icon="@drawable/ic_notification"
                        android:title="@string/notifications" />
                    <!--todo -->
                    <item
                        android:id="@+id/calendar_fragment"
                        android:icon="@drawable/ic_notification"
                        android:title="@string/calendar" />
                </menu>
            </item>
        </group>


    <group android:checkableBehavior="single">
        <item
            android:title="@string/profile"
            >
            <menu>
                <!--todo-->
                <item
                    android:id="@+id/viewProfileFragment"
                    android:icon="@drawable/baseline_login_24"
                    android:title="@string/profile" />
            </menu>
        </item>
    </group>

</menu>