<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.users.profile.StepOneUpdateFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- First Name Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstNameInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/name_placeholder"
                app:placeholderText="@string/name_label"
                app:startIconDrawable="@drawable/outline_person_24"
                app:startIconTint="@color/text_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Last Name Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/lastname_label"
                app:placeholderText="@string/lastname_hint"
                app:startIconDrawable="@drawable/outline_person_24"
                app:startIconTint="@color/text_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Email Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/email_label"
                app:placeholderText="@string/email_placeholder"
                app:startIconDrawable="@drawable/outline_email_24"
                app:startIconTint="@color/text_500"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                     />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cityInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:hint="@string/City"
                app:placeholderText="@string/city_placeholder"
                app:startIconDrawable="@drawable/outline_location_on_24"
                app:startIconTint="@color/text_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Address Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addressInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:hint="@string/living_address"
                app:placeholderText="@string/address_placeholder"
                app:startIconDrawable="@drawable/outline_location_on_24"
                app:startIconTint="@color/text_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress" />
            </com.google.android.material.textfield.TextInputLayout>



            <!-- Phone Number Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:hint="@string/telephone_input"
                app:placeholderText="@string/phone_placeholder"
                app:startIconDrawable="@drawable/outline_local_phone_24"
                app:startIconTint="@color/text_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>




            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/captureLayout"
                    android:layout_width="134dp"
                    android:layout_height="115dp"
                    android:layout_gravity="center"
                    android:background="@drawable/dashed_border">

                    <ImageView
                        android:id="@+id/profileImg"
                        android:layout_width="130dp"
                        android:layout_height="112dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:contentDescription="@string/profile_image"
                        android:scrollbars="vertical"
                        android:src="@drawable/event_image_placeholder"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.1"
                        app:layout_constraintStart_toStartOf="parent"
                         />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>


</FrameLayout>