<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price_list"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:paddingBottom="8dp" />

    <Button
        android:id="@+id/generatePdfBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:fontFamily="@font/poppins"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/generate_pdf"
        android:textAlignment="center"
        android:textFontWeight="600"
        app:cornerRadius="8dp"
        app:icon="@drawable/outline_shopping_bag_24"
        app:iconGravity="end"
        app:iconSize="24dp" />

    <LinearLayout
        android:id="@+id/headerRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/headerName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/headerPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/price"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/headerDiscount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:text="@string/discount"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/headerWithDiscount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/w_discount"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- Blank Space for Edit Button Alignment -->
        <TextView
            android:id="@+id/headerBlank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp" />
    </LinearLayout>


    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPriceList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingTop="8dp"
        android:paddingBottom="8dp" />
</LinearLayout>
